add: section about and css style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,21 @@
+:root {
+    --black: #000;
+}
 
-
-
-
+/* Navbar */
+.svg {
+    height: 2rem;
+    width: 2rem;
+}
 
 /* Hero Section */
-
-header img {
+.heroSection img {
     height: 100%;
     width:100%;
 }
 
+/* Main */
+
+/* main {
+    background-color: var(--black);
+} */
