--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,15 @@
     height: 10rem;
     width: 100%;
 }
+
+/* Footer */
+
+.footerStyle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-icon {
+    color: white;
+}
